[metadata]
description-file = README.rst
version = attr: dicodile.__version__

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-env

doc =
    numpydoc
    sphinx_bootstrap_theme
    sphinx_gallery

dev =
    flake8
    pre-commit

[flake8]
exclude = 
    .git,
    __pycache__,
    benchmarks/other/sporco,
    joblib
