[metadata]
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: POSIX
    Operating System :: Unix
description = Distributed Convolutional Dictionary Learning
download_url = https://github.com/tomMoral/dicodile.git
long_description = file: README.rst, LICENSE
license = BSD (3-clause)
maintainer = Thomas Moreau
maintainer_email = thomas.moreau@inria.fr
name = dicodile
platforms = any

[options]
install_requires =
    numpy
    numba
    scipy
    matplotlib
    mpi4py
    threadpoolctl
    joblib
    download
packages =
    dicodile
    dicodile.workers
    dicodile.utils
    dicodile.update_d
    dicodile.update_z
    dicodile.data

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-env

doc =
    numpydoc
    sphinx_bootstrap_theme
    sphinx_gallery

dev =
    flake8
    pre-commit

[flake8]
exclude = 
    .git,
    __pycache__,
    benchmarks/other/sporco,
    joblib

[check-manifest]
ignore =
    dicodile/version.py
